--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".RegisterActivity" />
 
         <activity android:name=".MainActivity" />
-
+        <activity android:name=".BurialDetailsActivity" />
         <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
