--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.AISCemetery"
         tools:targetApi="31">
         <activity android:name=".RegisterActivity" />
-
+        <activity android:name=".GuestListActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".OrdersActivity" />
         <activity android:name=".BurialDetailsActivity" />
