--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AISCemetery"
+        android:hardwareAccelerated="true"
+        android:largeHeap="true"
         tools:targetApi="31">
         <activity android:name=".activities.EditMemorialActivity" />
+        <activity android:name=".activities.MemorialDetailsActivity" />
+        <activity android:name=".activities.MemorialListActivity" />
+        <activity android:name=".activities.MapActivity" />
+        <activity android:name=".activities.PhotoActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".user.GuestListActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".order.OrdersActivity" />
-        <activity android:name=".memorial.BurialDetailsActivity" />
         <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
