--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".CemeteryApplication"
@@ -19,7 +23,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AISCemetery"
@@ -27,16 +31,13 @@
         android:largeHeap="true"
         tools:targetApi="31">
         <activity android:name=".activities.EditMemorialActivity" />
-        <activity android:name=".activities.MemorialDetailsActivity" />
-        <activity android:name=".activities.MemorialListActivity" />
-        <activity android:name=".activities.MapActivity" />
-        <activity android:name=".activities.PhotoActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".user.GuestListActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".order.OrdersActivity" />
         <activity android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
