same notifications and map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".activities.EditMemorialActivity" />
+        <activity android:name=".activities.ViewMemorialActivity" />
         <activity android:name=".user.GuestListActivity" />
         <activity android:name=".MainActivity" />
     </application>
