--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,11 @@ dependencies {
     
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.16.0'
+    kapt 'com.github.bumptech.glide:compiler:4.16.0'
+    
+    // CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     
     // Yandex MapKit
     implementation 'com.yandex.android:maps.mobile:4.4.0-full'
@@ -109,4 +113,6 @@ dependencies {
 
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
     implementation "androidx.security:security-crypto-ktx:1.1.0-alpha06"
+
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.0"
 } 
